examples/test/testpolicy11803.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11803
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key6: value41
      key11: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value15
      podSelector:
        matchLabels:
          key43: value27
          key49: value23
          key17: value4
